@@ -2086,6 +2086,13 @@ decl_stmt|;
 comment|// forbid direct selection of toMany relationships columns
 if|if
 condition|(
+name|property
+operator|.
+name|getType
+argument_list|()
+operator|!=
+literal|null
+operator|&&
 operator|(
 name|expressionType
 operator|==
@@ -2148,6 +2155,13 @@ operator|.
 name|FULL_OBJECT
 operator|||
 operator|(
+name|property
+operator|.
+name|getType
+argument_list|()
+operator|!=
+literal|null
+operator|&&
 name|expressionType
 operator|==
 name|Expression
@@ -2351,7 +2365,19 @@ argument_list|)
 decl_stmt|;
 name|ColumnDescriptor
 name|descriptor
-init|=
+decl_stmt|;
+if|if
+condition|(
+name|property
+operator|.
+name|getType
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+name|descriptor
+operator|=
 operator|new
 name|ColumnDescriptor
 argument_list|(
@@ -2370,7 +2396,24 @@ operator|.
 name|getName
 argument_list|()
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
+else|else
+block|{
+name|descriptor
+operator|=
+operator|new
+name|ColumnDescriptor
+argument_list|(
+name|builder
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+name|type
+argument_list|)
+expr_stmt|;
+block|}
 name|descriptor
 operator|.
 name|setDataRowKey
