@@ -6490,6 +6490,65 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+comment|/*      * Test deprecated property constructor      */
+annotation|@
+name|Test
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"deprecation"
+argument_list|)
+specifier|public
+name|void
+name|testDeprecateConstructor
+parameter_list|()
+block|{
+name|Property
+argument_list|<
+name|String
+argument_list|>
+name|property
+init|=
+operator|new
+name|Property
+argument_list|<>
+argument_list|(
+literal|"artistName"
+argument_list|)
+decl_stmt|;
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|names
+init|=
+name|ObjectSelect
+operator|.
+name|columnQuery
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|,
+name|property
+argument_list|)
+operator|.
+name|select
+argument_list|(
+name|context
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|20
+argument_list|,
+name|names
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
